# cpp-grpc-server

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: config.hpp.FBAD253F37355962.idx  main.cpp.D4BFCB9CC67CE6B3.idx  order.grpc.pb.cc.34A3D93BFA368E75.idx  order.grpc.pb.h.39A77F3FE732DA74.idx  order.pb.cc.F876D75B951C6602.idx  order.pb.h.10D09BBCD8D8A0BB.idx
include/: common.hpp
include/config/: config.hpp
include/interceptors/: logger.hpp
include/server/: server.hpp
include/service/: order_service.hpp
proto/order_service/: order.proto
scripts/: bootstrap.sh  proto-gen.sh
src/: client.cpp  main.cpp
src/server/: server.cpp
src/service/: order_service.cpp
